test/libsolidity/syntaxTests/storageLayoutSpecifier/address.sol
contract C layout at address(0x1234) {}
// ----
// UnimplementedFeatureError 1834: (0-39): Code generation is not supported for contracts with specified storage layout base.
